// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillPage /> renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "marginRight": 50,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Fitness Drill Title
              </Text>
            </View>
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="shareButton"
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      style={
                        Object {
                          "backgroundColor": "#fff",
                        }
                      }
                    >
                      <View>
                        <View
                          accessibilityIgnoresInvertColors={true}
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "rgb(0,0,0)",
                              "height": 1270,
                              "padding": 20,
                            }
                          }
                        >
                          <Image
                            source={
                              Object {
                                "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                Object {
                                  "height": 1270,
                                  "width": undefined,
                                },
                                Object {
                                  "opacity": 0.5,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "height": 533.6,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "#fff",
                                  "fontSize": 35,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Fitness Drill Title
                            </Text>
                            <Text
                              style={
                                Object {
                                  "color": "#fff",
                                  "fontSize": 14,
                                  "paddingHorizontal": 30,
                                }
                              }
                            >
                              Author
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 266.8,
                                "justifyContent": "space-evenly",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                10
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                minutes
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderRightColor": "#fff",
                                  "borderRightWidth": 0.5,
                                  "height": 15,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                1
                                +
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                players
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderRightColor": "#fff",
                                  "borderRightWidth": 0.5,
                                  "height": 15,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                Beginner
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                level
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#2a9e91",
                                  "borderRadius": 50,
                                  "height": 100,
                                  "justifyContent": "center",
                                  "margin": 20,
                                  "opacity": 1,
                                  "width": 100,
                                }
                              }
                              testID="startButton"
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 16,
                                    "fontWeight": "bold",
                                  }
                                }
                              >
                                Start
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "bottom": 0,
                                  "justifyContent": "center",
                                  "position": "absolute",
                                  "right": "15%",
                                  "top": 0,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                                testID="favoriteButton"
                              >
                                <Text />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 10,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Good for
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Full body
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Equipment
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Equipment needs for the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Description
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Description of the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                          </View>
                        </View>
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "flex": 1,
                                "paddingLeft": 10,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Warmup
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Do the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Last step
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "marginVertical": 10,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#2a9e91",
                                    "borderRadius": 5,
                                    "flexDirection": "row",
                                    "height": 40,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 10,
                                    "width": "80%",
                                  }
                                }
                                testID="startFitness"
                              >
                                <Text
                                  style={
                                    Object {
                                      "color": "#fff",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    }
                                  }
                                >
                                  Start
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`<DrillPage /> renders correctly a favorite drill 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "marginRight": 50,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Fitness Drill Title
              </Text>
            </View>
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="shareButton"
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 12,
                      },
                      Array [
                        Object {
                          "fontSize": 28,
                          "marginRight": 20,
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTScrollView
                      style={
                        Object {
                          "backgroundColor": "#fff",
                        }
                      }
                    >
                      <View>
                        <View
                          accessibilityIgnoresInvertColors={true}
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "rgb(0,0,0)",
                              "height": 1270,
                              "padding": 20,
                            }
                          }
                        >
                          <Image
                            source={
                              Object {
                                "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                Object {
                                  "height": 1270,
                                  "width": undefined,
                                },
                                Object {
                                  "opacity": 0.5,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "height": 533.6,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "#fff",
                                  "fontSize": 35,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Fitness Drill Title
                            </Text>
                            <Text
                              style={
                                Object {
                                  "color": "#fff",
                                  "fontSize": 14,
                                  "paddingHorizontal": 30,
                                }
                              }
                            >
                              Author
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 266.8,
                                "justifyContent": "space-evenly",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                10
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                minutes
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderRightColor": "#fff",
                                  "borderRightWidth": 0.5,
                                  "height": 15,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                1
                                +
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                players
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderRightColor": "#fff",
                                  "borderRightWidth": 0.5,
                                  "height": 15,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": "33%",
                                  "justifyContent": "center",
                                  "paddingHorizontal": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                Beginner
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 14,
                                  }
                                }
                              >
                                level
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#2a9e91",
                                  "borderRadius": 50,
                                  "height": 100,
                                  "justifyContent": "center",
                                  "margin": 20,
                                  "opacity": 1,
                                  "width": 100,
                                }
                              }
                              testID="startButton"
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#fff",
                                    "fontSize": 16,
                                    "fontWeight": "bold",
                                  }
                                }
                              >
                                Start
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "bottom": 0,
                                  "justifyContent": "center",
                                  "position": "absolute",
                                  "right": "15%",
                                  "top": 0,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                                testID="favoriteButton"
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#fff",
                                        "fontSize": 30,
                                      },
                                      undefined,
                                      Object {
                                        "fontFamily": "ionicons",
                                        "fontStyle": "normal",
                                        "fontWeight": "normal",
                                      },
                                      Object {},
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 10,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Good for
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Full body
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Equipment
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Equipment needs for the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                            <View
                              style={
                                Object {
                                  "padding": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#232b2b",
                                      "fontSize": 20,
                                      "fontWeight": "bold",
                                      "marginBottom": 5,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Description
                              </Text>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#A6A6A6",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Description of the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "borderBottomColor": "#e5e5e5",
                                  "borderBottomWidth": 1,
                                }
                              }
                            />
                          </View>
                        </View>
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "flex": 1,
                                "paddingLeft": 10,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Warmup
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Do the drill
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "padding": 10,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#232b2b",
                                    "fontSize": 16,
                                  }
                                }
                              >
                                • 
                                 
                                Last step
                              </Text>
                            </View>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "marginVertical": 10,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#2a9e91",
                                    "borderRadius": 5,
                                    "flexDirection": "row",
                                    "height": 40,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 10,
                                    "width": "80%",
                                  }
                                }
                                testID="startFitness"
                              >
                                <Text
                                  style={
                                    Object {
                                      "color": "#fff",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    }
                                  }
                                >
                                  Start
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTScrollView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
